Refactor add-plan 15/11/2022